[package]
name = "ate"
version = "1.2.2"
authors = ["Johnathan Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2021"
description = "Distributed immutable data store with strong encryption and authentication"
license = "MIT OR Apache-2.0"
keywords = ["immutable", "database", "crypto", "nosql", "async"]
categories = ["asynchronous", "caching", "cryptography", "database-implementations"]
repository = "https://github.com/john-sharratt/ate"
readme = "../README.md"

[features]
default = [ "client", "server", "enable_mt" ]
enable_verbose = []
enable_super_verbose = [ "enable_verbose" ]
enable_openssl = []
enable_buffered = [ "async-executor" ]
enable_local_fs = []
enable_rotate = []
enable_caching = []
enable_client = []
enable_server = [ "hyper-tungstenite" ]
enable_dio_backtrace = []
enable_ntp = []
enable_web_sys = []
enable_mt = [ "tokio/rt-multi-thread" ]
enable_dns = [ "trust-dns-proto", "trust-dns-client", "pnet", "ate-comms/dns" ]
enable_full = [ "tokio/net", "tokio-tungstenite", "enable_buffered", "enable_local_fs", "enable_rotate", "enable_caching", "enable_ntp", "enable_dns", "tokio/rt", "tokio/io-util", "tokio/time", "tokio/fs" ]
client_web = [ "enable_client", "enable_web_sys" ]
client = [ "sys", "enable_full", "enable_client" ]
server = [ "sys", "enable_full", "enable_server", "enable_client" ]
sys = [ "wasmer-bus/sys", "wasmer-bus-ws/sys", "ate-comms/sys" ]

[dependencies]
ate-crypto = { version = "^1", path = "../crypto", features = [ "quantum" ], default_features = false }
ate-comms = { version = "^1", path ="../comms", features = [ "quantum" ], default_features = false }
error-chain = { version = "^0.12", default_features = false }
uuid = { version = "^0.8", features = ["serde", "v4"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
rmp = "^0.8"
rmp-serde = "^0.15"
bytes = "^1"
futures = "^0.3"
futures-util = "^0.3"
hash = "^0.3"
async-trait = "^0.1"
rand = "^0.8"
fastrand = "^1"
snap = "^1"
once_cell = "^1"
rcu_cell = "^0.1"
multimap = "^0.8"
hex = "^0.4"
fxhash = "^0.2"
chrono = { version = "^0.4", git = "https://github.com/john-sharratt/chrono.git" }
pqcrypto-traits-wasi = { version = "^0.3", default_features = false }
pbr = "^1"
tracing = { version = "^0.1", features = [ "log" ] }
tracing-futures = { version = "^0.2" }
tracing-subscriber = { version = "^0.2" }
cached = "^0.23"
bincode = "^1"
async-executor = { version = "^1", optional = true }
url = { version = "^2", features = ["serde"] }
btreemultimap = { version = "^0.1" }
base64 = "^0.13"
num_enum = "^0.5"
pin-project-lite = "^0.2"
cooked-waker = "^5"
http = { version = "^0.2" }
tokio = { version = "^1", features = [ "macros", "sync" ], default_features = false }
derivative = { version = "^2" }
wasmer-bus = { version = "^1", path = "../wasmer-bus/lib", default_features = false }
wasmer-bus-ws = { version = "^1", path = "../wasmer-bus/ws", default_features = false }
wasmer-bus-time = { version = "^1", path = "../wasmer-bus/time" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
pnet = { version = "^0.27", optional = true }
tokio-tungstenite = { version = "^0.16", optional = true }
hyper-tungstenite = { version = "^0.6", optional = true }
trust-dns-proto = { version = "^0.20", optional = true }
trust-dns-client = { version = "^0.20", features = ["dnssec"], optional = true }
backtrace = { version = "^0.3" }

[dev-dependencies]
ctor = "0.1.*"
rust_decimal = "1.10.*"
names = "0.11.*"
clap = { version = "^3.0.0-rc.7", features = [ "derive" ] }
