[package]
name = "term-lib"
version = "0.1.0"
authors = ["John Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2018"
publish = false
description = "Terminal Library built on WASMER and ATE"
license = "MIT OR Apache-2.0"
keywords = [ "wasm", "browser", "terminal" ]
repository = "https://github.com/john-sharratt/ate"
readme = "../README.md"

[features]
default = [ "sys" ]
js = [ "wasmer/js-default", "wasmer-wasi/js-default" ]
sys = [ "wasmer/sys-default", "wasmer-wasi/sys-default", "tokio/rt-multi-thread" ]

[dependencies]
grammar = { version = "^0.1", package = "tok-grammar" }
wasmer = { version = "^2", git = "https://github.com/john-sharratt/wasmer.git", default-features = false, features = [ "wat"] }
wasmer-wasi = { version = "^2", git = "https://github.com/john-sharratt/wasmer.git", default-features = false }
wasmer-vfs = { version = "^2", git = "https://github.com/john-sharratt/wasmer.git", default-features = false, features = ["mem-fs"] }
#wasmer = { version = "^2", path = "../../wasmer/lib/api", default-features = false, features = [ "wat"] }
#wasmer-wasi = { version = "^2", path = "../../wasmer/lib/wasi", default-features = false }
#wasmer-vfs = { version = "^2", path = "../../wasmer/lib/vfs", default-features = false, features = ["mem-fs"] }
chrono = { version = "^0.4" }
tracing = { version = "^0.1" }
tracing-futures = { version = "^0.2" }
tracing-subscriber = { version = "^0.2" }
tracing-wasm = { version = "^0.2" }
bytes = "^1"
once_cell = "^1"
serde = { version = "^1", features = ["derive"] }
serde_derive = "^1"
serde_json = "^1"
tokio = { version = "^1", features = [ "rt", "time", "sync", "macros" ], default_features = false }
derivative = { version = "^2" }
base64 = { version = "^0.13" }
sha2 = { version = "^0.9" }
wasm-bus = { version = "^0.3", path = "../wasm-bus", features = [ "backend" ], default_features = false }
url = { version = "^2" }
regex = { version = "^1.5" }
fastrand = "^1.5"
bincode = "1"
async-trait = "^0.1"
dummy-waker = "^1"
clap = "^3.0.0-beta.5"
wild = "^2"
cooked-waker = { version = "^5" }