[package]
name = "term-lib"
version = "1.0.0"
authors = ["John Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2018"
description = "Terminal Library built on WASMER and ATE"
license = "MIT OR Apache-2.0"
keywords = [ "wasm", "browser", "terminal" ]
repository = "https://github.com/john-sharratt/ate"
readme = "../README.md"

[features]
default = [ "sys" ]
js = [ "wasmer/js-default", "wasmer-wasi/js-default" ]
sys = [ "wasmer/sys-default", "wasmer-wasi/sys", "wasmer-wasi/logging", "tokio/rt-multi-thread", "wasm-bus-tty/sys", "wasm-bus-ws/sys" ]
llvm = [ "wasmer-compiler-llvm", "wasmer-compiler" ]
cranelift = [ "wasmer-compiler-cranelift", "wasmer-compiler" ]
singlepass = [ "wasmer-compiler-singlepass", "wasmer-compiler" ]
cached_compiling = [ ]
async_ws = [ ]

[dependencies]
grammar = { version = "^0.1", package = "tok-grammar" }
wasmer = { version = "^2", git = "https://github.com/john-sharratt/wasmer.git", branch = "granular_locks", default-features = false, features = [ "wat"] }
wasmer-wasi = { version = "^2", git = "https://github.com/john-sharratt/wasmer.git", branch = "granular_locks", default-features = false, features = [ "mem-fs" ] }
wasmer-vfs = { version = "^2", git = "https://github.com/john-sharratt/wasmer.git", branch = "granular_locks", default-features = false, features = ["mem-fs"] }
wasmer-compiler-cranelift = { version = "^2", git = "https://github.com/john-sharratt/wasmer.git", branch = "granular_locks", optional = true }
wasmer-compiler-llvm = { version = "^2", git = "https://github.com/john-sharratt/wasmer.git", branch = "granular_locks", optional = true }
wasmer-compiler-singlepass = { version = "^2", git = "https://github.com/john-sharratt/wasmer.git", branch = "granular_locks", optional = true }
wasmer-compiler = { version = "^2", git = "https://github.com/john-sharratt/wasmer.git", branch = "granular_locks", optional = true }
#wasmer = { version = "^2", path = "../../wasmer/lib/api", default-features = false, features = [ "wat"] }
#wasmer-wasi = { version = "^2", path = "../../wasmer/lib/wasi", default-features = false, features = [ "mem-fs" ] }
#wasmer-vfs = { version = "^2", path = "../../wasmer/lib/vfs", default-features = false, features = ["mem-fs"] }
#wasmer-compiler-cranelift = { version = "^2", path = "../../wasmer/lib/compiler-cranelift", optional = true }
#wasmer-compiler-llvm = { version = "^2", path = "../../wasmer/lib/compiler-llvm", optional = true }
#wasmer-compiler-singlepass = { version = "^2", path = "../../wasmer/lib/compiler-singlepass", optional = true }
#wasmer-compiler = { version = "^2", path = "../../wasmer/lib/compiler", optional = true }
chrono = { version = "^0.4", git = "https://github.com/john-sharratt/chrono.git" }
tracing = { version = "^0.1" }
tracing-futures = { version = "^0.2" }
tracing-wasm = { version = "^0.2" }
bytes = "^1"
once_cell = "^1"
serde = { version = "^1", features = ["derive"] }
serde_derive = "^1"
serde_json = "^1"
tokio = { version = "^1", features = [ "rt", "time", "sync", "macros" ], default_features = false }
derivative = { version = "^2" }
base64 = { version = "^0.13" }
sha2 = { version = "^0.9" }
wasm-bus = { version = "^1", path = "../wasm-bus", features = [ "rt" ], default_features = false }
wasm-bus-fuse = { version = "^1", path = "../wasm-bus-fuse",  default_features = false }
wasm-bus-ws = { version = "^1", path = "../wasm-bus-ws", default_features = false }
wasm-bus-tty = { version = "^1", path = "../wasm-bus-tty", default_features = false }
wasm-bus-time = { version = "^1", path = "../wasm-bus-time", default_features = false }
wasm-bus-process = { version = "^1", path = "../wasm-bus-process", default_features = false }
wasm-bus-reqwest = { version = "^1", path = "../wasm-bus-reqwest", default_features = false }
url = { version = "^2" }
regex = { version = "^1.5" }
hex = "^0.4"
fastrand = "^1.5"
bincode = "1"
async-trait = "^0.1"
dummy-waker = "^1"
clap = { version = "^3.0.0-rc.7", features = [ "derive" ] }
wild = "^2"
cooked-waker = { version = "^5" }
serde_yaml = { version = "^0.8" }
include_dir = "0.7.2"
shellexpand = "^2"
weezl = "^0.1"