[package]
name = "tokera"
version = "1.0.0"
authors = ["Johnathan Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2018"
description = "Provides an interface into Tokera and its supporting services"
license = "MIT OR Apache-2.0"
keywords = [ "authentication", "cli", "authorization", "crypto" ]
categories = [ "data-structures", "command-line-utilities", "authentication", "cryptography" ]
repository = "https://github.com/john-sharratt/Tokera"
readme = "README.md"

[features]
default = [ "client", "server" ]
client_web = [ "ate/client_web" ]
client = [ "enable_full", "ate/client" ]
server = [ "enable_full", "ctrlc-async", "ate/server", "ate/enable_mt" ]
force_tty = [ "ate-auth/force_tty" ]
bus = []
enable_full = [ "enable_tcp" ]
enable_tcp = [ "enable_ntp", "enable_dns" ]
enable_dns = []
enable_ntp = []

[dependencies]
ate = { version = "^1", path = "../lib", default_features = false }
ate-auth = { version = "^1", path = "../auth", default_features = false }
ate-files = { version = "^1", path = "../files", default_features = false }
error-chain = { version = "^0.12", default_features = false }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tracing = { version = "^0.1", features = [ "log", "release_max_level_info" ] }
tracing-futures = { version = "^0.2" }
tracing-subscriber = { version = "^0.2" }
futures = "^0.3"
futures-util = "^0.3"
async-trait = "^0.1"
bytes = "^1"
fxhash = "^0.2"
fastrand = "^1"
chrono = { version = "^0.4", features = ["serde"] }
url = "^2"
rpassword-wasi = "^5"
regex = "^1"
hex = "^0.4"
google-authenticator = "^0.2"
qrcode = "^0.12"
base64 = "^0.13"
shellexpand = "^2"
clap = { version = "^3.0.0-rc.7", features = [ "derive" ] }
ctrlc-async = { version = "^3", optional = true }
bincode = "^1"
once_cell = "^1"
atty = "^0.2"
strum = "^0.21"
strum_macros = "^0.21"
rust_decimal = "^1"
num-traits = { version = "^0.2" }
wild = "^2"
pbr = "^1"
derivative = { version = "^2" }
wasm-bus = { version = "0.4", path = "../wasm-bus" }
wasm-bus-fuse = { version = "0.1", path = "../wasm-bus-fuse" }
wasm-bus-ws = { version = "0.1", path = "../wasm-bus-ws" }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
tokio = { version = "^1", features = [ "rt", "io-util", "macros", "sync", "time", "fs" ], default_features = false }

[target.'cfg(target_os = "wasi")'.dependencies]
tokio = { version = "^1", features = [ "macros", "sync" ], default_features = false }
backtrace = "^0.3"
wasi = { version = "^0.10" }
wasm-timer = { version = "^0.2" }