[package]
name = "tokterm"
version = "0.1.0"
authors = ["John Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2018"
publish = false
description = "Tokera Terminal built on WASMER and ATE"
license = "MIT OR Apache-2.0"
keywords = [ "wasm", "browser", "terminal" ]
repository = "https://github.com/john-sharratt/ate"
readme = "../README.md"

[features]
default = []

[dependencies]
term-lib = { version = "^0.1", path = "../term-lib" }
tracing = { version = "^0.1", features = [ "log", "release_max_level_info" ] }
#tracing = { version = "^0.1", features = [ "log", "release_max_level_debug" ] }
tracing-futures = { version = "^0.2" }
tracing-subscriber = { version = "^0.2" }
tracing-wasm = { version = "^0.2" }
bytes = "^1"
once_cell = "^1"
serde = { version = "^1", features = ["derive"] }
serde_derive = "^1"
serde_json = "^1"
tokio = { version = "^1", features = [ "rt", "rt-multi-thread", "time", "sync", "macros" ], default_features = false }
derivative = { version = "^2" }
base64 = { version = "^0.13" }
wasm-bus = { version = "^0.3", path = "../wasm-bus", features = [ "backend" ], default_features = false }
url = { version = "^2" }
fastrand = "^1.5"
bincode = "1"
async-trait = "^0.1"
clap = { version = "^3.0.0-rc.7", features = [ "derive" ] }
wild = "^2"
