[package]
name = "tokterm"
version = "0.1.0"
authors = ["John Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2018"
publish = false
description = "Tokera Terminal built on WASMER and ATE"
license = "MIT OR Apache-2.0"
keywords = [ "wasm", "browser", "terminal" ]
repository = "https://github.com/john-sharratt/ate"
readme = "../README.md"

[features]
default = []

[dependencies]
term-lib = { version = "^0.1", path = "../term-lib", features = [ "singlepass", "cranelift", "cached_compiling", "async_ws" ] }
#tracing = { version = "^0.1", features = [ "log", "release_max_level_warn" ] }
#log = { version = "^0.4", features = [ "release_max_level_warn" ] }
tracing = { version = "^0.1", features = [ "log", "release_max_level_trace" ] }
log = { version = "^0.4", features = [ "release_max_level_trace" ] }
tracing-futures = { version = "^0.2" }
tracing-subscriber = { version = "^0.2" }
tracing-wasm = { version = "^0.2" }
bytes = "^1"
once_cell = "^1"
serde = { version = "^1", features = ["derive"] }
serde_derive = "^1"
serde_json = "^1"
tokio = { version = "^1", features = [ "rt", "rt-multi-thread", "time", "sync", "macros", "net" ], default_features = false }
tokio-tungstenite = { version = "^0.16", features = [ "native-tls" ] }
futures = "^0.3"
futures-util = "^0.3"
derivative = { version = "^2" }
base64 = { version = "^0.13" }
wasm-bus = { version = "0.4", path = "../wasm-bus", features = [ "rt" ], default_features = false }
wasm-bus-reqwest = { version = "0.1", path = "../wasm-bus-reqwest" }
url = { version = "^2" }
fastrand = "^1.5"
bincode = "1"
async-trait = "^0.1"
clap = { version = "^3.0.0-rc.7", features = [ "derive" ] }
wild = "^2"
reqwest = { version = "0.11", features = ["json"] }
include_dir = "0.7.2"
term_size = "0.3.2"
raw_tty = "0.1.0"

[target.'cfg(unix)'.dependencies]
termios = "0.3"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["std", "winnt", "fileapi", "processenv", "winbase", "handleapi", "consoleapi", "minwindef", "wincon"] }