[package]
name = "wasi-net"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
bytes = "1"
http = "0.2"
futures-core = "0.3"
futures-util = "0.3"
http-body = "0.4"
pin-project-lite = "0.2"
url = "2"
mime_guess = "2"
percent-encoding = "2"
rand = "0.8"
formdata = "0.13"
urlencoding = "2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
base64 = "0.13"