[package]
name = "wasi-net"
version = "0.3.0"
authors = ["Johnathan Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2018"
description = "Interface used to make web requests on WASI operating systems"
license = "MIT OR Apache-2.0"
keywords = [ "wasi" ]
repository = "https://github.com/john-sharratt/ate"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "ws", "reqwest", "process" ]
backend = []
ws = []
reqwest = [ "http", "mime_guess", "http-body", "formdata" ]
process = []

[dependencies]
bytes = "1"
http = { version = "0.2", optional = true }
futures-core = "0.3"
futures-util = "0.3"
http-body = { version = "0.4", optional = true }
pin-project-lite = "0.2"
url = "2"
mime_guess = { version = "2", optional = true }
percent-encoding = "2"
rand = "0.8"
formdata = { version = "0.13", optional = true }
urlencoding = "2"
serde = { version = "^1", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
bincode = "1"
