[package]
name = "wasm-bus-mio"
version = "1.0.0"
authors = ["Johnathan Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2018"
description = "WebAssembly MIO"
license = "MIT OR Apache-2.0"
keywords = [ "wasi", "wasm", "opengl", "webgl" ]
repository = "https://github.com/john-sharratt/ate"
readme = "README.md"

[features]
default = [ "frontend" ]
frontend = [ "wasm-bus/syscalls" ]
backend = []

[dependencies]
wasm-bus = { version = "^1", path = "../wasm-bus", default_features = false, features = [ "rt", "macros" ] }
serde = { version = "^1", features = ["derive"] }
async-trait = "^0.1"
url = "^2"
