[package]
name = "wasm-bus-mio"
version = "1.0.0"
authors = ["Johnathan Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2018"
description = "WebAssembly MIO"
license = "MIT OR Apache-2.0"
keywords = [ "wasi", "wasm", "opengl", "webgl" ]
repository = "https://github.com/john-sharratt/ate"
readme = "README.md"

[features]
default = [ "frontend" ]
frontend = [ "wasm-bus/syscalls" ]
backend = []

[dependencies]
wasm-bus = { version = "^1", path = "../wasm-bus", default_features = false, features = [ "rt", "macros" ] }
serde = { version = "^1", features = ["derive"] }
async-trait = "^0.1"
url = "^2"

[dev-dependencies]
clap = { version = "^3.0.0-rc.7", features = [ "derive" ] }
fastrand = "^1.4"
byteorder = "^1.4"

[target.'cfg(not(target_os = "wasi"))'.dev-dependencies]
tokio = { version = "^1", features = [ "rt", "io-util", "macros", "sync", "time", "fs" ], default_features = false }

[target.'cfg(target_os = "wasi")'.dev-dependencies]
tokio = { version = "^1", features = [ "macros", "sync" ], default_features = false }