[package]
name = "wasm-bus-process"
version = "0.1.0"
authors = ["Johnathan Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2018"
description = "WebAssembly Process Interface"
license = "MIT OR Apache-2.0"
keywords = [ "wasi", "wasm", "bus", "process" ]
repository = "https://github.com/john-sharratt/ate"
readme = "README.md"

[features]
default = [ "frontend" ]
frontend = [ "wasm-bus/syscalls" ]

[dependencies]
wasm-bus = { version = "^0.4", path = "../wasm-bus", default_features = false, features = [ "rt", "macros" ] }
tracing = { version = "^0.1", features = [ "log" ] }
serde = { version = "^1", features = ["derive"] }
bytes = "1"
tokio = { version = "^1", features = [ "sync", "macros" ], default_features = false }