[package]
name = "wasm-bus"
version = "0.3.0"
authors = ["Johnathan Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2018"
description = "Invocation bus for web assembly modules"
license = "MIT OR Apache-2.0"
keywords = [ "wasi", "wasm", "bus" ]
repository = "https://github.com/john-sharratt/ate"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "syscalls", "ws", "reqwest", "process", "macros", "time", "rt", "tokio", "fuse" ]
syscalls = []
backend = []
ws = []
reqwest = [ "http", "mime_guess", "http-body", "formdata" ]
process = []
macros = []
time = []
rt = [ "cooked-waker" ]
fuse = []

[dependencies]
bytes = "1"
http = { version = "0.2", optional = true }
futures-core = "0.3"
futures-util = "0.3"
http-body = { version = "0.4", optional = true }
pin-project-lite = "0.2"
url = "2"
mime_guess = { version = "2", optional = true }
percent-encoding = "2"
formdata = { version = "0.13", optional = true }
urlencoding = "2"
serde = { version = "^1", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
bincode = "1"
once_cell = "^1"
derivative = { version = "^2" }
tracing = { version = "^0.1", features = [ "log" ] }
tokio = { version = "^1", features = [ "sync", "macros" ], default_features = false, optional = true }
cooked-waker = { version = "^5", optional = true }
