[package]
name = "wasm-bus"
version = "0.4.0"
authors = ["Johnathan Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2018"
description = "Invocation bus for web assembly modules"
license = "MIT OR Apache-2.0"
keywords = [ "wasi", "wasm", "bus" ]
repository = "https://github.com/john-sharratt/ate"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "syscalls", "macros", "rt" ]
syscalls = []
macros = [ "wasm-bus-macros" ]
rt = [ "cooked-waker" ]

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
bincode = "1"
once_cell = "^1"
derivative = { version = "^2" }
tracing = { version = "^0.1", features = [ "log" ] }
cooked-waker = { version = "^5", optional = true }
tokio = { version = "^1", features = [ "sync", "macros" ], default_features = false }
wasm-bus-macros = { version = "0.1", path = "../wasm-bus-macros", optional = true }
wasm-bus-types = { version = "0.1", path = "../wasm-bus-types" }