[package]
name = "wasmer-dfs"
version = "1.10.0"
authors = ["Johnathan Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2021"
description = "Distributed filesystem built on an immutable data store with strong encryption and authentication"
license = "MIT OR Apache-2.0"
keywords = ["immutable", "filesystem", "fuse", "fs" ]
categories = ["filesystem", "database", "development-tools"]
repository = "https://github.com/wasmerio/ate/tree/master/wasmer-dfs"
readme = "README.md"
build = "build.rs"
links = "fuse"

[features]
default = [ "client", "server" ]
client_web = [ "ate/client_web", "wasmer-auth/client_web", "ate-files/web" ]
client = [ "ate/client", "wasmer-auth/client", "ate-files/sys" ]
server = [ "ate/server", "wasmer-auth/server", "ate-files/sys", "ate/enable_mt" ]

[dependencies]
ate = { version = "^1.2", path = "../lib", default_features = false }
wasmer-auth = { version = "^1.9", path = "../wasmer-auth", default_features = false }
ate-files = { version = "^1.2", path = "../files", default_features = false }
wasmer-deploy = { version = "^1.3", path = "../wasmer-deploy" }
error-chain = { version = "^0.12", default_features = false }
tokio = { version = "^1", features = ["full", "signal", "process"] }
serde = { version = "^1", features = ["derive"] }
tracing = { version = "^0.1", features = [ "log", "release_max_level_info" ] }
tracing-futures = { version = "^0.2" }
tracing-subscriber = { version = "^0.2" }
futures = "^0.3"
futures-util = "^0.3"
async-trait = "^0.1"
bytes = "^1"
fxhash = "^0.2"
fastrand = "^1.4"
ctrlc-async = { version = "^3" }
libc = { version = "^0.2" }
fuse3 = { version = "0.2.0-beta.4", features = ["tokio-runtime", "unprivileged"] }
enum_dispatch = { version = "^0.3" }
clap = { version = "^3.0.0-rc.7", features = [ "derive" ] }
shellexpand = "^2"
cached = "^0.23"
seqlock = "^0.1"
array-init = "^1"
rpassword-wasi = "^5"
url = "^2"
pbr = "^1"

[build-dependencies]
pkg-config = "^0.3"
