[package]
name = "wasmer-gw"
version = "1.2.0"
authors = ["Johnathan Sharratt <johnathan.sharratt@gmail.com>"]
edition = "2021"
description = "High performance web gateway built on top of wasmer-dfs"
license = "MIT OR Apache-2.0"
keywords = [
    "static-web-server",
    "file-server",
    "http-server",
]
categories = ["network-programming", "web-programming::http-server"]
repository = "https://github.com/wasmerio/ate/tree/master/wasmer-dfs"
readme = "README.md"

[features]
default = [ "acme", "cors", "tls", "dfs" ]
dfs = [ "ate", "ate-files", "wasmer-auth" ]
tls = [ "tls-parser", "hyper-tls", "rustls", "tokio-rustls" ]
acme = [ "ring", "jsonxf", "base64", "rcgen", "pem", "chrono", "x509-parser", "ttl_cache" ]
cors = [ "reqwest" ]

[dependencies]
ate = { version = "^1.3", path = "../lib", features = [ "client", "server" ], default_features = false, optional = true }
ate-files = { version = "^1.2", path = "../files", optional = true }
wasmer-auth = { version = "^1.9", path = "../wasmer-auth", features = [ "client", "server" ], default_features = false, optional = true }
hyper = { version = "^0.14", features = ["full"] }
hyper-tls = { version = "^0.5", optional = true }
rustls = { version = "^0.19", optional = true }
async-compression = { version = "0.3", features = ["brotli", "deflate", "gzip", "tokio"] }
tokio-rustls = { version = "^0.22", optional = true }
http = { version = "0.2" }
mime_guess = { version = "2.0"}
error-chain = { version = "^0.12", default_features = false }
tokio = { version = "1.20.1", features = [ "signal", "process", "fs", "rt", "rt-multi-thread" ] }
tokio-tungstenite = { version = "^0.16" }
hyper-tungstenite = { version = "^0.6" }
serde = { version = "^1", features = [ "derive"] }
serde_yaml = { version = "^0.8" }
serde_json = { version = "^1" }
#tracing = { version = "^0.1", features = [ "log", "release_max_level_info" ] }
tracing = { version = "^0.1", features = [ "log" ] }
tracing-futures = { version = "^0.2" }
tracing-subscriber = { version = "^0.2" }
futures = { version = "^0.3" }
futures-util = { version = "^0.3" }
async-trait = { version = "^0.1" }
bytes = { version = "^1" }
ctrlc-async = { version = "^3" }
clap = { version = "^3.0.0-rc.7", features = [ "derive" ] }
url = { version = "^2" }
ttl_cache = { version = "^0.5", optional = true }
x509-parser = { version = "^0.12", optional = true }
chrono = { version = "^0.4", optional = true }
tls-parser = { version = "^0.10", optional = true }
pem = { version = "^0.8", optional = true }
rcgen = { version = "^0.8", optional = true }
base64 = { version = "^0.13", optional = true }
jsonxf = { version = "^1", optional = true }
ring = { version = "^0.16", features = ["std"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
